[FEAT] Google OAuth2.0 (https://ssafy.atlassian.net/browse/S07P31A707-73)

--- a/qhoto_api/src/main/resources/application.yaml
+++ b/qhoto_api/src/main/resources/application.yaml
@@ -31,7 +31,7 @@ spring:
 app:
   auth:
     token:
-      secret-key: "697505d57bb98c3258d71edcfddccb15"
+      secret-key: "c3NhZnlBNzA3"
       refresh-cookie-key: "refresh"
   oauth2:
     authorizedRedirectUri: "http://localhost:3000/oauth2/redirect"
