--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.70.3",
     "react-native-keyboard-aware-scrollview": "2.1.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "3.18.2"
+    "react-native-screens": "3.18.2",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
