--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -19,6 +19,7 @@
     "react-native-keyboard-aware-scrollview": "2.1.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "3.18.2",
+    "react-native-splash-screen": "^3.3.0",
     "react-redux": "^8.0.4"
   },
   "devDependencies": {
