--- a/qhoto_api/.gitignore
+++ b/qhoto_api/.gitignore
@@ -25,6 +25,8 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+application-local.yaml
+application.yaml
 
 ### NetBeans ###
 /nbproject/private/
