--- a/frontend/quotoApp/android/app/build.gradle
+++ b/frontend/quotoApp/android/app/build.gradle
@@ -303,6 +303,7 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+// apply plugin: 'com.google.gms.google-services' // Add at end of the file
 
 def isNewArchitectureEnabled() {
     // To opt-in for the New Architecture, you can either:
