--- a/frontend/quotoApp/android/build.gradle
+++ b/frontend/quotoApp/android/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         compileSdkVersion = 31
         targetSdkVersion = 31
         kotlin_version = '1.6.10'
+        // googlePlayServicesAuthVersion = "18.0.0" // Add this line
 
         if (System.properties['os.arch'] == "aarch64") {
             // For M1 Users we need to use the NDK 24 which added support for aarch64
@@ -25,6 +26,8 @@ buildscript {
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:5.0.1")
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // classpath 'com.google.gms:google-services:4.3.3' // Add this line
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
