--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "6.9.1",
     "react": "18.1.0",
     "react-native": "0.70.3",
+    "react-native-gesture-flip-card": "^1.0.6",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-keyboard-aware-scrollview": "2.1.0",
     "react-native-reanimated": "^2.11.0",
