--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -16,6 +16,7 @@
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-keyboard-aware-scrollview": "2.1.0",
+    "react-native-paper": "5.0.0-rc.8",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "3.18.2"
   },
