--- a/qhoto_api/build.gradle
+++ b/qhoto_api/build.gradle
@@ -18,6 +18,7 @@ repositories {
 	mavenCentral()
 }
 
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
@@ -26,6 +27,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation group: 'com.google.api-client', name: 'google-api-client-jackson2', version: '2.0.0'
+	implementation group: 'com.google.http-client', name: 'google-http-client-jackson2', version: '1.11.0-beta'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
