--- a/frontend/quotoApp/android/app/src/main/AndroidManifest.xml
+++ b/frontend/quotoApp/android/app/src/main/AndroidManifest.xml
@@ -8,8 +8,21 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
-      android:allowBackup="false"
+      android:allowBackup="true"
       android:theme="@style/AppTheme">
+      <activity 
+        android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+        android:exported="true">
+        <intent-filter>
+          <action android:name="android.intent.action.VIEW" />
+          <category android:name="android.intent.category.DEFAULT" />
+          <category android:name="android.intent.category.BROWSABLE" />
+      <!-- Redirect URI: "kakao{NATIVE_APP_KEY}://oauth“ -->
+          <data 
+            android:host="oauth"
+            android:scheme="kakaobc5dbc5cf434e04134341a939b6bd0bf" />
+        </intent-filter>
+      </activity>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
