--- a/frontend/quotoApp/android/build.gradle
+++ b/frontend/quotoApp/android/build.gradle
@@ -26,6 +26,7 @@ buildscript {
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:5.0.1")
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
         // classpath 'com.google.gms:google-services:4.3.3' // Add this line
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -52,5 +53,7 @@ allprojects {
         }
         google()
         maven { url 'https://www.jitpack.io' }
+        maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
+
     }
 }
