--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@react-native-google-signin/google-signin": "^8.0.1",
+    "@react-native-seoul/kakao-login": "^5.2.3",
     "@react-navigation/bottom-tabs": "6.4.0",
     "@react-navigation/native": "6.0.13",
     "@react-navigation/native-stack": "6.9.1",
+    "@react-navigation/stack": "^6.3.3",
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^0.27.2",
     "react": "18.1.0",
@@ -28,6 +30,7 @@
     "react-native-screens": "3.18.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-navigation-stack": "^2.10.4",
     "react-redux": "^8.0.4"
   },
   "devDependencies": {
