--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -20,8 +20,10 @@
     "axios": "^0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-flip-card": "^1.0.6",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-image-modal": "^2.0.4",
     "react-native-image-picker": "^4.10.0",
     "react-native-keyboard-aware-scrollview": "2.1.0",
     "react-native-paper": "5.0.0-rc.8",
