[FEAT] Add profile upload

--- a/frontend/quotoApp/android/app/src/main/AndroidManifest.xml
+++ b/frontend/quotoApp/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
   package="com.quotoapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> -->
 
     <application
       android:name=".MainApplication"
@@ -10,6 +13,8 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="true"
       android:theme="@style/AppTheme">
+      <activity android:name="com.ahmedadeltito.photoeditor.PhotoEditorActivity" />
+      <activity android:name="com.yalantis.ucrop.UCropActivity" />
       <activity 
         android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
         android:exported="true">
