--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -21,12 +21,16 @@
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-fast-image": "^8.6.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-flip-card": "^1.0.6",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-image-crop-picker": "^0.38.1",
     "react-native-image-modal": "^2.0.4",
     "react-native-image-picker": "^4.10.0",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-keyboard-aware-scrollview": "2.1.0",
     "react-native-paper": "5.0.0-rc.8",
+    "react-native-photo-editor": "^1.0.13",
     "react-native-reanimated": "^2.11.0",
     "react-native-reanimated-carousel": "^3.1.1",
     "react-native-safe-area-context": "4.4.1",
@@ -34,7 +38,8 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation-stack": "^2.10.4",
-    "react-redux": "^8.0.4"
+    "react-redux": "^8.0.4",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
