--- a/qhoto_api/src/main/resources/application.yaml
+++ b/qhoto_api/src/main/resources/application.yaml
@@ -5,16 +5,6 @@ server:
 #  profiles:
 #    active: local
 
-  security:
-    oauth2:
-      client:
-        registration:
-          google:
-            client-id: 1091823482731-f0375q139gm9me0a4v7cg50jiamjkcq4.apps.googleusercontent.com
-            client-secret: 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
-            redirect-uri: http://localhost:7070/oauth2/callback/google
-            scope: profile, email
-
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -45,6 +35,8 @@ cloud:
       secretKey: k/u1F1nPq2fukuY1K2Cj6ONdpIU+E2xBvd922bhg
     stack:
       auto: false
+    cloudfront:
+      domainName: https://dxg5pxu9dqf6e.cloudfront.net
 
 app:
   auth:
