--- a/frontend/quotoApp/android/app/src/main/AndroidManifest.xml
+++ b/frontend/quotoApp/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
   package="com.quotoapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
       android:name=".MainApplication"
@@ -35,5 +36,7 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <activity android:name="com.ahmedadeltito.photoeditor.PhotoEditorActivity" />
+      <activity android:name="com.yalantis.ucrop.UCropActivity" />
     </application>
 </manifest>
