--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.10",
     "@react-native-google-signin/google-signin": "^8.0.1",
     "@react-native-seoul/kakao-login": "^5.2.3",
     "@react-navigation/bottom-tabs": "6.4.0",
