--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@digieggs/rn-polygon-chart": "^1.0.5",
     "@react-native-async-storage/async-storage": "1.17.10",
     "@react-native-google-signin/google-signin": "^8.0.1",
     "@react-native-seoul/kakao-login": "^5.2.3",
@@ -39,6 +40,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "3.18.2",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^13.5.0",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^8.0.4",
