--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -41,6 +41,7 @@
     "react-native-screens": "3.18.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.5.0",
+    "react-native-switch-toggle": "^2.2.1",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^8.0.4",
