[REFACTOR] Enum refactoring (https://ssafy.atlassian.net/browse/S07P31A707-205)

--- a/qhoto_api/src/main/resources/application.yaml
+++ b/qhoto_api/src/main/resources/application.yaml
@@ -14,6 +14,11 @@ spring:
     password: ssafyA707
     port: 5672
 
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
+
   jpa:
     hibernate:
       ddl-auto: update
