--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -43,6 +43,7 @@
     "react-native-svg": "^13.5.0",
     "react-native-switch-toggle": "^2.2.1",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "6.0.0-alpha.3",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^8.0.4",
     "rn-fetch-blob": "^0.12.0"
