--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.3",
+    "react-native-alert-notification": "^0.3.4",
     "react-native-calendars": "^1.1291.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
