--- a/frontend/quotoApp/android/build.gradle
+++ b/frontend/quotoApp/android/build.gradle
@@ -19,9 +19,9 @@ buildscript {
     }
     repositories {
         google()
-        maven { url "https://jitpack.io" }
+        maven { url 'https://mvnrepository.com/artifact/com.github.gundy/semver4j' }
         mavenCentral()
-        maven { url "https://jitpack.io" }
+        maven { url 'https://mvnrepository.com/artifact/com.github.gundy/semver4j' }
     }
     dependencies {
         classpath("com.android.tools.build:gradle:7.2.1")
@@ -55,6 +55,7 @@ allprojects {
             }
         }
         google()
+        maven { url 'https://mvnrepository.com/artifact/com.github.gundy/semver4j' }
         maven { url 'https://www.jitpack.io' }
         maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
 
