[FEAT] Add GetContact NonComplete

--- a/frontend/quotoApp/android/app/build.gradle
+++ b/frontend/quotoApp/android/app/build.gradle
@@ -251,6 +251,9 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
+    // Contact 관련 설정
+    implementation project(':react-native-contacts')
+
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
