--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@digieggs/rn-polygon-chart": "^1.0.5",
     "@react-native-async-storage/async-storage": "1.17.10",
+    "@react-native-community/checkbox": "^0.5.14",
     "@react-native-google-signin/google-signin": "^8.0.1",
     "@react-native-seoul/kakao-login": "^5.2.3",
     "@react-navigation/bottom-tabs": "6.4.0",
