--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -20,6 +20,8 @@
     "@react-navigation/native-stack": "6.9.1",
     "@react-navigation/stack": "^6.3.3",
     "@reduxjs/toolkit": "^1.8.6",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.3",
