--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -28,16 +28,19 @@
     "react-native": "0.70.3",
     "react-native-alert-notification": "^0.3.4",
     "react-native-calendars": "^1.1291.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-contacts": "^7.0.5",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-flip-card": "^1.0.6",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-gifted-charts": "^1.2.41",
     "react-native-image-crop-picker": "^0.38.1",
     "react-native-image-modal": "^2.0.4",
     "react-native-image-picker": "^4.10.0",
     "react-native-image-resizer": "^1.4.5",
     "react-native-keyboard-aware-scrollview": "2.1.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "5.0.0-rc.8",
     "react-native-photo-editor": "^1.0.13",
