--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -43,6 +43,7 @@
     "react-native-photo-editor": "^1.0.13",
     "react-native-reanimated": "^2.11.0",
     "react-native-reanimated-carousel": "^3.1.1",
+    "react-native-render-html": "6.3.4",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "3.18.2",
     "react-native-splash-screen": "^3.3.0",
@@ -52,6 +53,7 @@
     "react-native-video": "6.0.0-alpha.3",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^8.0.4",
+    "remarkable": "2.0.1",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
