--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -25,6 +25,7 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^0.27.2",
     "react": "18.1.0",
+    "react-content-loader": "^6.2.0",
     "react-native": "0.70.3",
     "react-native-alert-notification": "^0.3.4",
     "react-native-calendars": "^1.1291.0",
@@ -47,7 +48,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "3.18.2",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^13.5.0",
+    "react-native-svg": "^13.6.0",
     "react-native-switch-toggle": "^2.2.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "6.0.0-alpha.3",
