--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -27,7 +27,7 @@
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-alert-notification": "^0.3.4",
-    "react-native-calendars": "^1.1291.0",
+    "react-native-calendars": "^1.1275.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-contacts": "^7.0.5",
     "react-native-fast-image": "^8.6.3",
@@ -48,14 +48,16 @@
     "react-native-reanimated-carousel": "^3.1.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "3.18.2",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^13.5.0",
+    "react-native-svg": "^13.6.0",
     "react-native-switch-toggle": "^2.2.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "6.0.0-alpha.3",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^8.0.4",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
