--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -45,6 +45,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-paper": "5.0.0-rc.8",
     "react-native-photo-editor": "^1.0.13",
+    "react-native-popover-tooltip": "1.1.4",
     "react-native-reanimated": "^2.11.0",
     "react-native-reanimated-carousel": "^3.1.1",
     "react-native-render-html": "6.3.4",
@@ -56,11 +57,12 @@
     "react-native-switch-toggle": "^2.2.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "6.0.0-alpha.3",
+    "react-native-walkthrough-tooltip": "1.4.0",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^8.0.4",
+    "remarkable": "2.0.1",
     "rn-fetch-blob": "^0.12.0",
-    "victory-native": "^36.6.8",
-    "remarkable": "2.0.1"
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
