--- a/frontend/quotoApp/package.json
+++ b/frontend/quotoApp/package.json
@@ -50,6 +50,7 @@
     "react-native-render-html": "6.3.4",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "3.18.2",
+    "react-native-shadow-2": "^7.0.6",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.6.0",
@@ -58,9 +59,9 @@
     "react-native-video": "6.0.0-alpha.3",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^8.0.4",
+    "remarkable": "2.0.1",
     "rn-fetch-blob": "^0.12.0",
-    "victory-native": "^36.6.8",
-    "remarkable": "2.0.1"
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
